--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "npm-watch": "^0.11.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
