--- a/package.json
+++ b/package.json
@@ -3,27 +3,31 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "watch": {
-    "build": "wwwroot/js/es6/Game/.js"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "npm-watch"
+    "watch": "npm-watch",
+    "style": "npx tailwindcss build ./wwwroot/css/site.css -o ./wwwroot/css/output.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "autoprefixer": "^9.8.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "npm-watch": "^0.11.0",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.1",
+    "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-  }
+    "webpack-cli": "^4.10.0",
+    "postcss-cli": "^10.0.0"
+  },
+  "dependencies": {}
 }
